--- a/src/QualityHats/appsettings.json
+++ b/src/QualityHats/appsettings.json
@@ -4,6 +4,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-QualityHats-1c9cf589-31be-4d07-81fe-ad4b41758d7d;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=dochyper.unitec.ac.nz;Database=lia15sqlserver2;user id=lia15;password=06121987;"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -12,5 +13,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "UserSettings": {
+    "UserEmail": "admin@email.com",
+    "UserPassword": "P@ssw0rd"
+
   }
 }
