--- a/src/QualityHats/appsettings.json
+++ b/src/QualityHats/appsettings.json
@@ -15,8 +15,7 @@
     }
   },
   "UserSettings": {
-    "UserEmail": "admin@email.com",
+    "UserEmail": "admin@qualityhats.co.nz",
     "UserPassword": "P@ssw0rd"
-
   }
 }
